--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ El contenido de esta revista pertenece a sus autores y colaboradores. Se permite
     </main>
 
     <footer>
-        <p>&copy; U.E. Oscar Unzaga de la Vega 2025.<br>by Julio Cesar Maertens</p>
+        <p>&copy; U.E. Oscar Unzaga de la Vega 2025.<br>by J-M-L</p>
     </footer>
 
     <script src="js/script.js"></script>
